--- a/index.html
+++ b/index.html
@@ -9,14 +9,31 @@
     <body>
         <div id="contacts">
 	        <header>
-		        <div id="filter"><label>Show Me:</label></div>
-	        </header>	       
+		        <div id="filter"><label>Show Only: </label></div>
+		        <button id="showFormButton">Add Contacts</button>
+		        <form id="addContacts" action="#">
+				    <label for="name">Name:</label><input id="name" />
+				    <label for="position">Position:</label><input id="position" />
+				    <button id="add">Add</button>
+				</form>
+	        </header>       
         </div>
         <br>
         <script id="contactTemplate" type="text/template">
 		    <img src="<%= photo %>" alt="<%= name %>" />
 		    <h1><%= name %><span></span></h1>
 		    <div><%= position %></div>
+		    <button class="delete">Delete</button>
+		    <button class="edit">Edit</button>
+		</script>
+		<script id="contactEditTemplate" type="text/template">
+			<form action="#">
+			    <input type="file" value="<%= photo %>" />
+			    <input class="name" value="<%= name %>" />
+			    <input id="position" value="<%= position %>" />
+			    <button class="save">Save</button>
+			    <button class="cancel">Cancel</button>
+			</form>
 		</script>
         <script src="js/jquery-1.7.1.min.js"></script>
         <script src="js/Underscore-min.js"></script>
