Adding edit capabilities

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<form action="#">
 			    <input type="file" value="<%= photo %>" />
 			    <input class="name" value="<%= name %>" />
-			    <input id="position" value="<%= position %>" />
+			    <input class="position" value="<%= position %>" />
 			    <button class="save">Save</button>
 			    <button class="cancel">Cancel</button>
 			</form>
