Basic working version — add, delete, and edit. Ready for integration with Paste.com

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		        <div id="filter"><label>Show Only: </label></div>
 		        <button id="showFormButton">Add Contacts</button>
 		        <form id="addContacts" action="#">
-				    <label for="name">Name:</label><input id="name" />
-				    <label for="position">Position:</label><input id="position" />
+				    <label for="name">Player's Name:</label><input id="name" />
+				    <label for="position">Player's Position:</label><input id="position" />
 				    <button id="add">Add</button>
 				</form>
 	        </header>       
