--- a/index.html
+++ b/index.html
@@ -20,24 +20,26 @@
         </div>
         <br>
         <script id="contactTemplate" type="text/template">
-		    <img src="<%= photo %>" alt="<%= name %>" />
-		    <h1><%= name %><span></span></h1>
-		    <div><%= position %></div>
+		    <!-- <img src="<%= Photo %>" alt="<%= PlayerName %>" /> -->
+		    <h1><%= PlayerName %><span></span></h1>
+		    <div><%= Position %></div>
 		    <button class="delete">Delete</button>
 		    <button class="edit">Edit</button>
 		</script>
 		<script id="contactEditTemplate" type="text/template">
 			<form action="#">
-			    <input type="file" value="<%= photo %>" />
-			    <input class="name" value="<%= name %>" />
-			    <input class="position" value="<%= position %>" />
+			    <!-- <input type="file" value="<%= Photo %>" /> --> 
+			    <input class="name" value="<%= PlayerName %>" />
+			    <input class="position" value="<%= Position %>" />
 			    <button class="save">Save</button>
 			    <button class="cancel">Cancel</button>
 			</form>
 		</script>
+		<div id="footer"></div>
         <script src="js/jquery-1.7.1.min.js"></script>
         <script src="js/Underscore-min.js"></script>
         <script src="js/Backbone-min.js"></script>
+        <script src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
