--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Backbone.js Web App</title>
+        <title>Team Manager App</title>
         <link rel="stylesheet" href="css/screen.css" />
     </head>
     <body>
